Fixing the header
Logotype scales with screen width too much

--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body {
 #header-text {
 	display: inline-block;
 	float: left;
-	font-size: 6vw;
+	font-size: calc(6vw / 2);
 	line-height: 15vh;
 }
 
